test/reject/masked_user_call.rk
crunch helper(x: f32s) -> f32s:
  return sqrt(x)

rake masked_call(x: f32s) -> f32s:
  tine #active when x >= <0.0>

  through #active else <0.0> into computed:
    helper(x)

  return sweep:
    | #active => computed
    | _       => <0.0>
